--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css" />
-    <title>INFORPETROL</title>
+    <title>INFORPETROL 2.0</title>
   </head>
   <body>
     <div class="container-wrapper">
